syntax = "proto3";

package com.github.im.common.connect.model.proto;
option java_package = "com.github.im.common.connect.model.proto";
option java_outer_classname = "Chat";
import "google/protobuf/any.proto";
import "Account.proto";

// chat 信息
message ChatMessage  {


  int64 msgId = 1 ;

  int32 seq = 4;

  string content  = 3 ;
  //client-server
  int64 conversationId = 9 ;

  string conversationName = 10 ;

  AccountInfo fromAccountInfo = 2 ;
 // server-client
  AccountInfo toAccountInfo = 8 ;

  sint32 clientTimeStamp = 7 ;

  sint32 serverTimeStamp = 12 ;

  MessageType type = 6 ;

//  google.protobuf.Any chat = 10;

  MessagesStatus messagesStatus = 11;




  enum MessagesStatus{

      REJECT = 0 ;

      OFFLINE = 1 ;

      SENTFAIL = 7 ;

      HISTORY = 10 ;

      READ = 3 ;

      UNREAD = 2 ;

      SENT = 5 ;

      UNSENT = 11 ;


  }


}

enum MessageOperationType{

  SEND = 0 ;

  RECEIVE = 1 ;


}


enum MessageType{

  TEXT = 0 ;

  MARKDOWN = 5;

  FILE = 1 ;

  STREAM = 2 ;

  VIDEO = 3 ;

  IMAGE = 6;


}